--- a/templates/footer.htm
+++ b/templates/footer.htm
@@ -49,7 +49,7 @@
 </div>
 <div class="float-left wid66"></div>
 <div class="clr">&nbsp;</div>
-<div class="we_accept clr"><div class="float-left padleft40 padtop10 padright20">We Accept:</div><div class="float-left"><a href="#"><img src="misc/images/visa.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/master.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/amex.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/discover.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/paypal.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/google.jpg" border="0" /></a></div>
+<div class="we_accept clr"><div class="float-left padleft40 padtop10 padright20">We Accept:</div><div class="float-left"><a href="#"><img src="misc/images/visa.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/master.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/amex.jpg" width="77" height="32" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/discover.jpg" border="0" /></a>&nbsp;&nbsp;<a href="#"><img src="misc/images/paypal.jpg" border="0" /></a>&nbsp;&nbsp;</div>
 </div>
 </div>
 <form method="post" name="mailing" action="http://saltwaterfish.us2.list-manage1.com/subscribe/post?u=fe7ad84cfa3047b07306cbd74&amp;id=f673568c4c" style="margin: 0px; padding: 0px;">
