--- a/templates/myaccount_links.htm
+++ b/templates/myaccount_links.htm
@@ -75,7 +75,7 @@
 <div class="vertical_tab_new">
 <ul>
 <li>
-<a href="/mywishlist">
+<a href="/addressbook">
 <div class="vertical_inner">
 <div class="float-left"><img src="/misc/images/book_img.png" width="17" height="13" border="0" /></div>
 <div class="float-left padleft10 ">MY ADDRESS BOOK</div>
