--- a/templates/product_article_add.htm
+++ b/templates/product_article_add.htm
@@ -37,7 +37,7 @@ Add Article</div>
   </tr>
   <tr>
     <td style="width:763px; padding-top:10px">
-<form method="post" action="/productactions" method=post>
+<form method="post" action="/aproductactions" method=post>
 		<input type="hidden" name="catalog" value="{{pid}}">
 		<input type="hidden" name="action" value="addarticle">
 		{% csrf_token %} 
