--- a/templates/product_article_edit.htm
+++ b/templates/product_article_edit.htm
@@ -36,7 +36,7 @@
   </tr>
   <tr>
     <td style="width:763px; padding-top:10px">
-<form method="post" action="/productactions" method=post>
+<form method="post" action="/aproductactions" method=post>
 		<input type="hidden" name="id" value="{{allpages.id}}">
 		<input type="hidden" name="action" value="editarticle">
 		{% csrf_token %} 
