--- a/templates/productedit.htm
+++ b/templates/productedit.htm
@@ -40,12 +40,12 @@
 </div>
 <div class="clr" style="background-color:#dddddd; height:4px;"></div>
 <ul class="tabs1"  >
-	<li><a href="/productinfo?pid={{allitems.catalogid}}" rel="view1">Information</a></li>
-	<li><a href="/productimages?pid={{allitems.catalogid}}" rel="view2">Images</a></li>
-	<li><a href="/productrelated?pid={{allitems.catalogid}}"  rel="view3">Related</a></li>
-	<li><a href="/productoptions?pid={{allitems.catalogid}}"  rel="view4">Options</a></li>
-	<li><a href="/productarticles?pid={{allitems.catalogid}}&page=1"  rel="view5">Articles</a></li>
-	<li><a href="/productreviews?pid={{allitems.catalogid}}"  rel="view6">Reviews</a></li>
+	<li><a href="/aproductinfo?pid={{allitems.catalogid}}" rel="view1">Information</a></li>
+	<li><a href="/aproductimages?pid={{allitems.catalogid}}" rel="view2">Images</a></li>
+	<li><a href="/aproductrelated?pid={{allitems.catalogid}}"  rel="view3">Related</a></li>
+	<li><a href="/aproductoptions?pid={{allitems.catalogid}}"  rel="view4">Options</a></li>
+	<li><a href="/aproductarticles?pid={{allitems.catalogid}}&page=1"  rel="view5">Articles</a></li>
+	<li><a href="/aproductreviews?pid={{allitems.catalogid}}"  rel="view6">Reviews</a></li>
 </ul>
 <div class="clr product_info">Product Information</div>
 
