--- a/templates/products.htm
+++ b/templates/products.htm
@@ -84,7 +84,7 @@ Records:<b>{{count}} </b>&nbsp;&nbsp;&nbsp; Page {{page_num}} of {% widthratio c
 	  {% endif %}
   {% endif %}</div>
 <div class="order-txt2 product_price_txt">${{item.price|floatformat:"2"}}</div>
-<div class="order-txt3 product_action_txt"><a href="/productinfo?pid={{item.catalogid}}"><img src="/misc/images/edit.jpg" width="55" height="24" border="0" /></a></div>
+<div class="order-txt3 product_action_txt"><a href="/aproductinfo?pid={{item.catalogid}}"><img src="/misc/images/edit.jpg" width="55" height="24" border="0" /></a></div>
 </div>
  {% empty %}
 	<em class="formee-req">No Records</em>
