--- a/templates/search.htm
+++ b/templates/search.htm
@@ -3,8 +3,37 @@
  
  
  <link type="text/css" rel="stylesheet" href="/misc/category.css" />
+<script language="javascript" type="text/javascript" src="/misc/js/imagetooltip.js"></script>
+ <script language="javascript" type="text/javascript" src="/misc/js/jquery.bpopup.min.js"></script>
+ 
+<script type="text/javascript">
+	;(function($) {
+         $(function() {
+            $('.pop1').bind('click', function(e) {
+                e.preventDefault();
+				var a_href = $(this).attr('id');
+				$("#contentss").load(a_href);
+                $('#popup').bPopup({
+				});
+			});
+			 
+        });
 
+    })(jQuery);
 
+</script>
+<style>
+ 
+#popup, #popup2, .bMulti {
+background-color: #fff;
+border-radius: 10px 10px 10px 10px;
+box-shadow: 0 0 25px 5px #999;
+color: #111;
+display: none;
+min-width: 450px;
+padding: 1px;
+}
+</style>
 {% load tagsfilter %} 
 <div class="float-left wid20">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop15">
@@ -35,7 +64,12 @@
 				{% if products.stock >= 1 %}
 					<div class="blue-button"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 				{% else %}
-					<div class="wish-button"><a href="/addtowatchlist?itemid={{ products.catalogid }}">WISH LIST</a></div>
+						{% if request.session.IsLogin %}
+							<div class="wish-button "><a href="##" id="/addtowatchlist?itemid={{products.catalogid}}&name=" class="pop1">WISH LIST</a></div>
+						{% else %}
+							<div class="wish-button"><a  href="##" id="/waitpopup?itemid={{ products.catalogid }}" class="pop1">WISH LIST</a></div>
+							 
+						{% endif %}
 				{% endif %}
  <div class="hash-button"><a href="/product?pid={{ products.catalogid }}">more details...</a></div>
 </div>
@@ -44,17 +78,9 @@
 {% if forloop.counter|divisibleby:3 %}</tr>{% endif %}
 {% endfor %}
 <tr><td colspan=3>
-
-<div style="clear:both;  height:21px; line-height:21px; " class="records">Records:<b>{{countresult}} </b> Page {{page_num}} of {% widthratio countresult 100 1 %} |&nbsp;Goto Page: <a href="/search?query={{keyword}}&page=1">First</a> 
-{% if page_num < 2 %}
-<a href="/search?query={{keyword}}&page=1">Previous</a>
-{% elif page_num >= 2 %}
-    <a href="/search?query={{keyword}}&page={{page_num|add:-1}}">Previous</a>
+{%if countresult > 21 %}
+<div style="clear:both;  height:21px; line-height:21px; " class="records">{{paginate|safe}}</div>
 {% endif %}
-
-
-| <a href="/search?query={{keyword}}&page={{page_num|add:+1}}">Next </a> &nbsp<a href="/search?query={{keyword}}&page={% widthratio countresult 100 1 %}">Last</a></span>
-</div>
 </td></tr>
  </table>
  
@@ -74,4 +100,8 @@
 <div class="float-left"></div>
 
 </div></div>
+<div id="popup" style="left: -700px; position: absolute; top: 1177px; z-index: 9999; opacity: 1; display: none;min-height:200px;">
+        
+        <div id="contentss" style="height: auto; width: auto;"></div>
+</div>
 {% endblock content %}
