--- a/templates/admin_header.htm
+++ b/templates/admin_header.htm
@@ -63,14 +63,14 @@ mm_menu_0311194645_0.writeMenus();
 				<li><a href="/exportcustomers">Import/Export</a></li>
 			</ul>
 		</li>
-		<li><a href="/products?page=1">Products</a>
+		<li><a href="/aproducts?page=1">Products</a>
 			<ul style="*margin-left:45px;">
-				<li><a href="/products?page=1">View/Edit</a></li>
+				<li><a href="/aproducts?page=1">View/Edit</a></li>
 				<li><a href="/addproduct">Add Product</a></li>
 				<li><a href="#">Bundles</a></li>
 				<li><a href="/categories?page=1">Categories</a></li>
 				<li><a href="#">Inventory</a></li>
-					<li><a href="/product_wish_list?page=1">Wish List</a></li>
+					<li><a href="/aproduct_wish_list?page=1">Wish List</a></li>
 				<li><a href="/all_product_reviews?page=1">Reviews</a></li>
 				<li><a href="products-import-export.htm">Import/Export</a></li>
 			</ul>
